removed obsolete JDK11 failsafe options